De lists gefixt, en objecten in de list gegooid in plaats van rawquery data. nu begonnen met aanmaken van detail activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
             android:parentActivityName=".Activities.LoginActivity" />
         <activity android:name=".Activities.ProductActivity" />
         <activity android:name=".Activities.OefeningenActivity" />
-        <activity android:name=".Activities.SchemasActivity"></activity>
+        <activity android:name=".Activities.SchemasActivity" />
+        <activity android:name=".Activities.StartTrainingActivity" />
+        <activity android:name=".Activities.ProductDetailsActivity"></activity>
     </application>
 
 </manifest>
