Hoop gedaan aan starten van een training, gezorgd dat er een datum en gewicht ingevuld kan worden

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         <activity android:name=".Activities.SchemasActivity" />
         <activity android:name=".Activities.StartTrainingActivity" />
         <activity android:name=".Activities.ProductDetailsActivity" />
-        <activity android:name=".Activities.OefeningDetailsActivity"></activity>
+        <activity android:name=".Activities.OefeningDetailsActivity" />
+        <activity android:name=".Activities.StartTrainingMetSchemaActivity" />
+        <activity android:name=".Activities.PickDateActivity"></activity>
     </application>
 
 </manifest>
