--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".Activities.ProductDetailsActivity" />
         <activity android:name=".Activities.OefeningDetailsActivity" />
         <activity android:name=".Activities.StartTrainingMetSchemaActivity" />
+        <activity android:name=".Activities.TrainingDetailsActivity"></activity>
     </application>
 
 </manifest>
